--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -44,3 +44,19 @@
 	</ion-side-menu>
 
 </ion-side-menus>
+
+<script id="templates/modal.html" type="text/ng-template">
+
+	<ion-modal-view>
+		<ion-header-bar>
+			<h1 class="title"></h1>
+			<button class="button button-clear" ng-click="hide()">Close</button>
+		</ion-header-bar>
+		<ion-content>
+			<div class="padding">
+				<h2>Hello!</h2>
+			</div>
+		</ion-content>
+	</ion-modal-view>
+
+</script>
