--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -9,7 +9,7 @@
 				</button>
 			</ion-nav-buttons>
 			<ion-nav-buttons side="right">
-				<button class="button button-icon button-clear ion-ios-person">
+				<button class="button button-icon button-clear ion-ios-person" ng-click="profileModal.show()">
 				</button>
 			</ion-nav-buttons>
 		</ion-nav-bar>
@@ -45,12 +45,12 @@
 
 </ion-side-menus>
 
-<script id="templates/modal.html" type="text/ng-template">
+<script id="templates/profile.html" type="text/ng-template">
 
 	<ion-modal-view>
 		<ion-header-bar>
 			<h1 class="title"></h1>
-			<button class="button button-clear" ng-click="hide()">Close</button>
+			<button class="button button-clear" ng-click="profileModal.hide()">Close</button>
 		</ion-header-bar>
 		<ion-content>
 			<div class="padding">
